@@ -246,8 +246,8 @@ object SSH {
         error("Failed to change permissions of " + quote(remote_path(path)))
       }
 
-    override def set_executable(path: Path, flag: Boolean = false): Unit =
-      if (!execute("chmod a" + (if (flag) "+" else "-") + "x " + bash_path(path)).ok) {
+    override def set_executable(path: Path, reset: Boolean = false): Unit =
+      if (!execute("chmod a" + (if (reset) "-" else "+") + "x " + bash_path(path)).ok) {
         error("Failed to change executable status of " + quote(remote_path(path)))
       }
 
@@ -408,8 +408,8 @@ object SSH {
     def is_file(path: Path): Boolean = path.is_file
     def delete(path: Path): Unit = path.file.delete
     def restrict(path: Path): Unit = File.restrict(path)
-    def set_executable(path: Path, flag: Boolean = false): Unit =
-      File.set_executable(path, flag = flag)
+    def set_executable(path: Path, reset: Boolean = false): Unit =
+      File.set_executable(path, reset = reset)
     def make_directory(path: Path): Path = Isabelle_System.make_directory(path)
     def rm_tree(dir: Path): Unit = Isabelle_System.rm_tree(dir)
     def with_tmp_dir[A](body: Path => A): A = Isabelle_System.with_tmp_dir("tmp")(body)
